Enable build on JDK 19